--- a/RRT-PIO/platformio.ini
+++ b/RRT-PIO/platformio.ini
@@ -13,7 +13,11 @@ build_flags =
     -D VERSION=2.0.0
     -D DEBUG=1
 
-lib_extra_dirs = /lib/.../
+
+include_dir = /include
+
+lib_dir = /lib
+;lib_extra_dirs = /lib/.../
 
 lib_deps_builtin =
     Wire
