--- a/RRT-PIO/platformio.ini
+++ b/RRT-PIO/platformio.ini
@@ -8,10 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = adafruit_feather_nrf52832
+;default_envs = lolin_d32
+
+
 [common_env_data]
 build_flags =
-    -D VERSION=2.0.0
     -D DEBUG=1
+;    -D VERSION=2.0.0
 
 
 include_dir = /include
@@ -22,7 +27,6 @@ lib_dir = /lib
 lib_deps_builtin =
     Wire
     Tasker
-;lib_deps_external =
 
 
 [env:lolin_d32]
@@ -34,4 +38,27 @@ monitor_speed = 115200
 
 lib_deps =
     ${common_env_data.lib_deps_builtin}
-;    ${common_env_data.lib_deps_external}
+;    BLEDevice
+;    BLEServer
+;    BLEUtils
+;    BLE2902
+
+build_flags =
+    ${common_env_data.build_flags}
+    -D BOARD=3
+
+
+
+[env:adafruit_feather_nrf52832]
+platform = nordicnrf52
+board = adafruit_feather_nrf52832
+framework = arduino
+
+monitor_speed = 115200
+
+lib_deps =
+    ${common_env_data.lib_deps_builtin}
+
+build_flags =
+    ${common_env_data.build_flags}
+    -D BOARD=1
