PIO build environments & Constants.h cleanup

--- a/RRT-PIO/platformio.ini
+++ b/RRT-PIO/platformio.ini
@@ -9,8 +9,11 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = adafruit_feather_nrf52832
-;default_envs = lolin_d32
+;default_envs = BOARD_ESP32_LOLIND32_MLX90640
+default_envs =
+    BOARD_NRF52_FEATHER_MLX90640
+    BOARD_ESP32_FEATHER_MLX90640
+    BOARD_ESP32_LOLIND32_MLX90640
 
 
 [common_env_data]
@@ -18,18 +21,51 @@ build_flags =
     -D DEBUG=1
 ;    -D VERSION=2.0.0
 
-
 include_dir = /include
 
 lib_dir = /lib
-;lib_extra_dirs = /lib/.../
 
 lib_deps_builtin =
     Wire
     Tasker
 
 
-[env:lolin_d32]
+
+[env:BOARD_NRF52_FEATHER_MLX90640]
+platform = nordicnrf52
+board = adafruit_feather_nrf52832
+framework = arduino
+
+monitor_speed = 115200
+
+lib_deps =
+    ${common_env_data.lib_deps_builtin}
+
+build_flags =
+    ${common_env_data.build_flags}
+    -D BOARD=1
+    -D FIS_SENSOR=2
+
+
+
+[env:BOARD_ESP32_FEATHER_MLX90640]
+platform = espressif32
+board = featheresp32
+framework = arduino
+
+monitor_speed = 115200
+
+lib_deps =
+    ${common_env_data.lib_deps_builtin}
+
+build_flags =
+    ${common_env_data.build_flags}
+    -D BOARD=2
+    -D FIS_SENSOR=2
+
+
+
+[env:BOARD_ESP32_LOLIND32_MLX90640]
 platform = espressif32
 board = lolin_d32
 framework = arduino
@@ -38,29 +74,8 @@ monitor_speed = 115200
 
 lib_deps =
     ${common_env_data.lib_deps_builtin}
-;    BLEDevice
-;    BLEServer
-;    BLEUtils
-;    BLE2902
 
 build_flags =
     ${common_env_data.build_flags}
     -D BOARD=3
-
-
-
-[env:adafruit_feather_nrf52832]
-platform = nordicnrf52
-board = adafruit_feather_nrf52832
-framework = arduino
-
-monitor_speed = 115200
-
-lib_ldf_mode = chain+
-
-lib_deps =
-    ${common_env_data.lib_deps_builtin}
-
-build_flags =
-    ${common_env_data.build_flags}
-    -D BOARD=1
+    -D FIS_SENSOR=2
