fix debug output, minor platformio.ini changes

--- a/RRT-PIO/platformio.ini
+++ b/RRT-PIO/platformio.ini
@@ -9,11 +9,10 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-;default_envs = BOARD_ESP32_LOLIND32_MLX90640
-default_envs =
-    BOARD_NRF52_FEATHER_MLX90640
-    BOARD_ESP32_FEATHER_MLX90640
-    BOARD_ESP32_LOLIND32_MLX90640
+description = "RejsaRubberTrac - A wireless thermal camera for tires - Log and view tire temperature zones on race- and trackday cars"
+
+;default_envs = BOARD_NRF52_FEATHER_MLX90640
+default_envs = BOARD_NRF52_FEATHER_MLX90640, BOARD_ESP32_FEATHER_MLX90640, BOARD_ESP32_LOLIND32_MLX90640
 
 
 [common_env_data]
