--- a/RRT-PIO/platformio.ini
+++ b/RRT-PIO/platformio.ini
@@ -12,10 +12,9 @@
 description = "RejsaRubberTrac - A wireless thermal camera for tires - Log and view tire temperature zones on race- and trackday cars"
 
 ;default_envs = BOARD_NRF52_FEATHER_MLX90640
-default_envs = BOARD_ESP32_FEATHER_MLX90640
+default_envs = BOARD_ESP32_FEATHER_MLX90621
 ;default_envs = BOARD_ESP32_LOLIND32_MLX90640
 ;default_envs = BOARD_NRF52_FEATHER_MLX90640, BOARD_ESP32_FEATHER_MLX90640, BOARD_ESP32_LOLIND32_MLX90640
-
 
 [common_env_data]
 build_flags =
@@ -62,8 +61,22 @@ lib_deps =
 build_flags =
     ${common_env_data.build_flags}
     -D BOARD=2
-    -D FIS_SENSOR=2
+    -D FIS_SENSOR=1
 
+[env:BOARD_ESP32_FEATHER_MLX90621]
+platform = espressif32
+board = featheresp32
+framework = arduino
+
+monitor_speed = 115200
+
+lib_deps =
+    ${common_env_data.lib_deps_builtin}
+
+build_flags =
+    ${common_env_data.build_flags}
+    -D BOARD=2
+    -D FIS_SENSOR=2
 
 
 [env:BOARD_ESP32_LOLIND32_MLX90640]
