--- a/RRT-PIO/.vscode/settings.json
+++ b/RRT-PIO/.vscode/settings.json
@@ -7,6 +7,7 @@
         "string": "cpp",
         "unordered_map": "cpp",
         "unordered_set": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "limits": "cpp"
     }
 }
