added M5 Stick (ESP32) build env (untested)

--- a/RRT-PIO/platformio.ini
+++ b/RRT-PIO/platformio.ini
@@ -14,7 +14,8 @@ description = "RejsaRubberTrac - A wireless thermal camera for tires - Log and v
 ;default_envs = BOARD_NRF52_FEATHER_MLX90640
 ;default_envs = BOARD_ESP32_FEATHER_MLX90640
 ;default_envs = BOARD_ESP32_LOLIND32_MLX90640
-default_envs = BOARD_NRF52_FEATHER_MLX90640, BOARD_ESP32_FEATHER_MLX90640, BOARD_ESP32_LOLIND32_MLX90640
+default_envs = BOARD_ESP32_M5STICK_MLX90640
+;default_envs = BOARD_NRF52_FEATHER_MLX90640, BOARD_ESP32_FEATHER_MLX90640, BOARD_ESP32_LOLIND32_MLX90640
 
 
 [common_env_data]
@@ -79,4 +80,21 @@ lib_deps =
 build_flags =
     ${common_env_data.build_flags}
     -D BOARD=3
+    -D FIS_SENSOR=2
+
+
+
+[env:BOARD_ESP32_M5STICK_MLX90640]
+platform = espressif32
+board = m5stick-c
+framework = arduino
+
+monitor_speed = 115200
+
+lib_deps =
+    ${common_env_data.lib_deps_builtin}
+
+build_flags =
+    ${common_env_data.build_flags}
+    -D BOARD=4
     -D FIS_SENSOR=2
